  53. Can now ignore an account, which seems obvious when I think about it.
  54. Most crafting expertises split-up and made more expensive -- backward comp.
  55. Can now disable showing experience in Score and in the Prompt using DISABLE cmd.
  56. New Property: Prop_UseAdjuster, mostly insane, but good for special potion effects.
  57. New Expertises: Vigorous cooking, Imbued Distilling, Fortified Baking
  58. New chants: Airy Aura (Mer)
  59. Achievements now includes social tracking.
  60. New common skills: Boatwright (is the OLD Shipwright), and Shipwright (large sailing ships)
  61. New skills: Familiarity_Axe/Sword/etc, Familiarity_Armor/Shield - for crafted items
  62. New common skills: Decorating, CargoLoading
  63. Artisan class has been re-imagined using a Skill Tree instead of the normal system.
  64. Socials can now have multi-word targeted variations for further specificity.
  65. New skills: Hard to Port, Hard to Stern, Tie Down, Abandon Ship, Play Instrument
  66. New spells: Greater Enchant Armor, Greater Enchant Weapon
  67. Fishing now has fishing.txt, with lots of expanded override fish-types.
  68. Smelting has been altered to work more like textiling, expanding its range of possibilities.
  69. Costuming and Master Costuming have been radically changed to be learn-only fake overlays.
  70. Hunting now has a hunting.txt, plus some water-based things to hunt
# Build 5.9.6 Release 12/31/2017
   *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
   1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
   2. Entering SHUTDOWN RESTART HARD will now attempt to run a restart.sh/restart.bat.
   3. GMODIFY now supports changing the CLASS of objects, including rooms.
   4. RESET RELEVEL tool added to refactor an areas level range.
   5. New skills: Studying, Labeling, Organizing, Dissertating, Shush, Titling
   6. Areas can now be unloaded.  And then loaded back again.  See UNLOAD and LOAD.