@@ -1303,7 +1303,7 @@ Parameters : ;[XML TAGS...]\n\r\
 Description: \n\r\
 When applied to a container, this property will allow the container to remember \
 which things were put into it by a player.  Then, whenever the player attempts \
-to wear/hold/wield the container, has the container has items/armor/weapons inside, \
+to wear/hold/wield the container, if the container has items/armor/weapons inside, \
 the player will actually wear the containing items instead.  The automatic wearing of \
 the contained items will automatically remove conflicting items as normal. Later, when the \
 remembered items are removed, they will automatically be put back into the container that \
