@@ -56,7 +56,7 @@
   54. Most crafting expertises split-up and made more expensive -- backward comp.
   55. Can now disable showing experience in Score and in the Prompt using DISABLE cmd.
   56. New Property: Prop_UseAdjuster, mostly insane, but good for special potion effects.
-  57. New Expertises: Vigorous cooking, Imbued Distilling, Fortified Baking
+  57. New Expertises: Vigorous cooking, Imbued Distilling, Fortified Baking, Adv Crafting
   58. New chants: Airy Aura (Mer)
   59. Achievements now includes social tracking.
   60. New common skills: Boatwright (is the OLD Shipwright), and Shipwright (large sailing ships)
@@ -70,6 +70,8 @@
   68. Smelting has been altered to work more like textiling, expanding its range of possibilities.
   69. Costuming and Master Costuming have been radically changed to be learn-only fake overlays.
   70. Hunting now has a hunting.txt, plus some water-based things to hunt
+  71. New Expertises: Adv cooking
+  72. Crafting expertise keywords can now be hidden from item name
 # Build 5.9.6 Release 12/31/2017
    *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
    1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
